--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/nilbertojr/gama-hiringcoders-desafio01#readme",
   "dependencies": {
+    "gulp": "^4.0.2",
     "gulp-install": "^1.1.0"
   },
   "devDependencies": {
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.0.0",
     "sass": "^1.35.2"
   }
